--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ p {
 }
 
 body {
-    background-color: wheat;
+    background-color: rgb(255, 255, 255);
     font-size: 20px;
 }
 .button-linkedin {
-    background-color: #00d9ff; /* Green */
+    background-color: #0077b5;
   border: none;
   color: rgb(0, 0, 0);
   padding: 15px 32px;
@@ -25,7 +25,7 @@ body {
 }
 
 .button-github {
-    background-color: #5c5c5c; /* Green */
+    background-color: #100000;
   border: none;
   color: rgb(0, 0, 0);
   padding: 15px 32px;
@@ -36,7 +36,7 @@ body {
 }
 
 .button-instagram {
-    background-color: #f380f7; /* Green */
+    background-color: #e4405f;
   border: none;
   color: rgb(0, 0, 0);
   padding: 15px 32px;
@@ -47,7 +47,7 @@ body {
 }
 
 .button-twitter {
-    background-color: #00ccff; /* Green */
+    background-color: #1da1f2; /* Green */
   border: none;
   color: rgb(0, 0, 0);
   padding: 15px 32px;
@@ -56,7 +56,7 @@ body {
   display: inline-block;
   font-size: 16px;
 }
-.button-profi{
+.button-profi {
     background-color: #000000; /* Green */
     border: none;
     color: rgb(255, 255, 255);
@@ -65,4 +65,25 @@ body {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;   
+}
+.imagem-centro {
+  border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+}
+.nome-centro {
+  display: block;
+  margin-left: 40%;
+  
+}
+.header-cor {
+  /* background-color: cadetblue;
+  border-radius: 5%; */
+}
+.redessociais {
+  right: 200px;
+  text-align: center;
+  padding: 10px;
 }
