--- a/style.css
+++ b/style.css
@@ -2,43 +2,72 @@ h1,
 h2,
 h3,
 h4 {
-    font-family: monospace;
+  font-family: monospace;
 }
 
 p {
-    font-family: monospace;
+  font-family: monospace;
 }
 
 body {
-    background-color: rgb(255, 255, 255);
-    font-size: 20px;
+  background-color: rgb(255, 255, 255);
+  font-size: 20px;
 }
+
 .button-linkedin {
-    background-color: #0077b5;
+  background-color: #0077b5;
   border: none;
   color: rgb(0, 0, 0);
   padding: 15px 32px;
-  text-align: center;
+  text-align: top;
+  height: 350px;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
 }
 
 .button-github {
-    background-color: #100000;
+  background-color: #100000;
   border: none;
   color: rgb(0, 0, 0);
   padding: 15px 32px;
-  text-align: center;
+  text-align: top;
+  height: 350px;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
 }
 
 .button-instagram {
-    background-color: #e4405f;
+  background-color: #e4405f;
   border: none;
   color: rgb(0, 0, 0);
+  padding: 15px 32px;
+  text-align: top;
+  height: 350px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.button-twitter {
+  background-color: #1da1f2;
+  /* Green */
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 15px 32px;
+  text-align: top;
+  height: 350px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.button-profi {
+  background-color: #000000;
+  /* Green */
+  border: none;
+  color: rgb(255, 255, 255);
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -46,44 +75,40 @@ body {
   font-size: 16px;
 }
 
-.button-twitter {
-    background-color: #1da1f2; /* Green */
-  border: none;
-  color: rgb(0, 0, 0);
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-.button-profi {
-    background-color: #000000; /* Green */
-    border: none;
-    color: rgb(255, 255, 255);
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;   
-}
 .imagem-centro {
   border-radius: 50%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
 }
+
 .nome-centro {
   display: block;
   text-align: center;
-  
+
 }
+
 .header-cor {
-  /* background-color: cadetblue;
-  border-radius: 5%; */
+  /* background-color: #39627f; */
 }
+
+.body-cor {
+  /* background-color: #ffffff; */
+}
+
 .redessociais {
   right: 200px;
   text-align: center;
   padding: 10px;
+}
+
+.redes-cor {
+  /* background-color: #4b788f; */
+}
+.redes-nome-cor{
+  
+  color: rgb(255, 255, 255);
+  background-color: #000000;
+  padding: 20px;
 }
