--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ h2,
 h3,
 h4 {
   font-family: monospace;
+  color: #525252;
 }
 
 p {
@@ -68,7 +69,6 @@ body {
 
 .button-profi {
   background-color: #000000;
-  /* Green */
   border: none;
   color: rgb(255, 255, 255);
   padding: 15px 32px;
@@ -94,7 +94,9 @@ body {
 }
 
 .header-cor {
- 
+  border-radius: 10px 10px 10px 10px;
+  padding: 20px;
+  background-color: #525252;
 }
 
 .body-cor {
@@ -113,6 +115,10 @@ body {
 .redes-nome-cor{
   border-radius: 10px 10px 10px 10px;
   color: rgb(255, 255, 255);
-  background-color: #000000;
+  background-color: #525252;
   padding: 20px;
+}
+.logo-header {
+  max-width: 15%;
+  height: auto;
 }
